<resources>
    <string name="app_name" translatable="false">CountryQuiz</string>

    <string name="no_internet_connection">No internet connection</string>

    <string name="play">Play</string>
    <string name="last_matches">Last Matches</string>
    <string name="custom_settings">Custom Settings</string>
    <string name="score">Score</string>
    <string name="question_count">Question Count</string>
    <string name="playtime">Playtime</string>
    <string name="every_question">For every question?</string>
    <string name="retry">Retry</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="win">Win</string>
    <string name="loose">Loose</string>
    <string name="best_score">Best Score: %s</string>
    <string name="best_time">Best Time: %s</string>
    <string name="max_score" translatable="false">/%s</string>

    <string name="minute">m</string>
    <string name="seconds">s</string>

    <string name="life_count">Life Count</string>

    <string name="categories">Categories</string>
    <string name="category.all">All</string>

    <string name="category.dialCode">Dial Code</string>
    <string name="category.capital">Capital</string>
    <string name="category.flags">Flag</string>


    <string name="gamemode">Game Mode</string>
    <string name="gamemode.classic">Classic Mode</string>
    <string name="gamemode.classic.description">Unlimited time, 1 life, 25 country</string>
    <string name="gamemode.medium">Medium Mode</string>
    <string name="gamemode.medium.description">Unlimited time, 1 life, 50 country</string>
    <string name="gamemode.hard">Hard Mode</string>
    <string name="gamemode.hard.description">Unlimited time, 1 life, 100 country</string>
    <string name="gamemode.impossible">Impossible Mode</string>
    <string name="gamemode.impossible.description">Unlimited time, 1 life, 193 country</string>
    <string name="gamemode.againsttime">Against Time</string>
    <string name="gamemode.againsttime.description">10 minutes, 3 life, 193 country</string>
    <string name="gamemode.againsttime2">Against Time - 2</string>
    <string name="gamemode.againsttime2.description">5 seconds every question, 3 life, 193 country</string>
    <string name="gamemode.custom">Custom</string>
    <string name="gamemode.custom.description">You can change every settings</string>


    <string name="question.to.capital">What is the capital of this country?</string>
    <string name="question.from.capital">Which country is this capital?</string>

    <string name="question.to.dialCode">What is the dial code of this country?</string>
    <string name="question.from.dialCode">This dial code belongs to which country?</string>


    <string name="question.to.flags">What is the flag of this country?</string>
    <string name="question.from.flags">This flag belongs to which country?</string>


</resources>