<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center">

    <TextView
        android:id="@+id/gameMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamemode.classic"
        android:textSize="30sp"
        android:textColor="@color/text_primary"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="24 of 25"
        android:textSize="35sp"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="20sp"
        android:textColor="@color/text_primary"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textSize="30sp"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category.dialCode"
                android:textSize="25sp"
                android:textColor="@color/text_primary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category.capital"
                android:textSize="25sp"
                android:textColor="@color/text_primary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category.flags"
                android:textSize="25sp"
                android:textColor="@color/text_primary"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playtime"
                android:textSize="30sp"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/playtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/text_primary"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/retry"
        android:text="@string/retry"
        style="@style/Button.Answer"
        android:layout_width="match_parent"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/backtomenu"
        android:text="@string/back_to_menu"
        style="@style/Button.Answer"
        android:layout_width="match_parent"/>

</LinearLayout>